--- a/catalog.html
+++ b/catalog.html
@@ -9,63 +9,386 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <header>
-
+  <h1>Интернет магазин</h1>
     </header>
     <main>
-        <section>
-            <div class="container catalog">
-                <div class="catalog__filter"></div>
-                <div class="catalog__content">
-                    <div class="catalog__sort"></div>
-                    <div class="catalog__grid">
-                        <div class="catalog__card">
-
-                        <div class="img__wrapper">
-                            <img class="catalog__img" src="img/06435f31-b9c7-4977-9b47-2ff80a66f3f4.webp" alt="">
-                            <i class="fav-btn bi bi-heart-fill"></i>
-                            <div class="catalog__promotions">
-                                <div class="sales">
-                                    Распродажа
-                                </div>
-                            </div>
-                        </div>
-
-                            <div class="catalog__orice">
-                                <span class="price-now">3500 &#8381;</span>
-                                <span class="price-early">8673 &#8381;</span>
-                                <span class="price-sale">-30% &#8381;</span>
-                            </div>
-                            <div class="catalog__rest">
-                                Осталось 50 шт
-                            </div>
-                            <div class="catalog__brand">
-                                <i class="bi bi-check-circle-fill"></i>
-                                оригинал
-                            </div>
-                            <p class="catalog__title">HUAWEI Смартфон Pura 70 Pro Ростест (EAC) 12/512 ГБ, белый</p>
-
-                            <div class="catalog__feedback">
-                                <div class="catalog__raiting">
-                                  <i class="bi bi-star-fill"></i>
-                                  <span>4,7</span>
-                                </div>
-                                <div class="catalog__review">
-                                  <i class="bi bi-chat-fill"></i>
-                                  <span>789 отзыва</span>
-                                </div> 
-                              </div>
-                
-                            <button class="catalog__btn">Заказать</button>
-                        </div>
+      <section>
+        <div class="container catalog">
+          <div class="catalog__filter"></div>
+          <div class="catalog__content">
+            <div class="catalog__sort"></div>
+            <div class="catalog__grid">
+              <div class="catalog__card">
+                <div class="img__wrapper">
+                  <img class="catalog__img" src="img/06435f31-b9c7-4977-9b47-2ff80a66f3f4.webp" alt="">
+                  <i class="fav-btn bi bi-heart-fill"></i>
+                  <div class="catalog__promotions">
+                    <div class="sales">
+                      Распродажа
                     </div>
+                  </div>
                 </div>
+                <div class="catalog__price">
+                  <span class="price-now">3500 &#8381;</span>
+                  <span class="price-early">7600 &#8381;</span>
+                  <span class="price-sale">-30%</span>
+                </div>
+                <div class="catalog__rest">
+                  Осталось 50 шт
+                </div>
+                <div class="catalog__brand">
+                  <i class="bi bi-check-circle-fill"></i>
+                  ориганал
+                </div>
+                <a href="#" class="catalog__title">Чехол из алькантары на Apple </a>
+  
+                <div class="catalog__feedback">
+                  <div class="catalog__raiting">
+                    <i class="bi bi-star-fill"></i>
+                    <span>4,7</span>
+                  </div>
+                  <div class="catalog__review">
+                    <i class="bi bi-chat-fill"></i>
+                    <span>789 отзыва</span>
+                  </div>
+                </div>
+                <button class="catalog__btn">Заказать</button>
+              </div>
+              <div class="catalog__card">
+                <div class="img__wrapper">
+                  <img class="catalog__img" src="img/Clock.webp" alt="">
+                  <i class="fav-btn bi bi-heart-fill"></i>
+                  <div class="catalog__promotions">
+                    <div class="sales">
+                      Распродажа
+                    </div>
+                  </div>
+                </div>
+                <div class="catalog__price">
+                  <span class="price-now">3500 &#8381;</span>
+                  <span class="price-early">7600 &#8381;</span>
+                  <span class="price-sale">-30%</span>
+                </div>
+                <div class="catalog__rest">
+                  Осталось 50 шт
+                </div>
+                <div class="catalog__brand">
+                  <i class="bi bi-check-circle-fill"></i>
+                  ориганал
+                </div>
+                <a href="#" class="catalog__title">Чехол из алькантары на Apple iPhone 16 Pro хол из алькантары на Apple iPhone 16 Pro хол из алькантары на Apple iPhone 16 Pro</a>
+  
+                <div class="catalog__feedback">
+                  <div class="catalog__raiting">
+                    <i class="bi bi-star-fill"></i>
+                    <span>4,7</span>
+                  </div>
+                  <div class="catalog__review">
+                    <i class="bi bi-chat-fill"></i>
+                    <span>789 отзыва</span>
+                  </div>
+                </div>
+                <button class="catalog__btn">Заказать</button>
+              </div>
+              <div class="catalog__card">
+                <div class="img__wrapper">
+                  <img class="catalog__img" src="img/iphon.webp" alt="">
+                  <i class="fav-btn bi bi-heart-fill"></i>
+                  <div class="catalog__promotions">
+                    <div class="sales">
+                      Распродажа
+                    </div>
+                  </div>
+                </div>
+                <div class="catalog__price">
+                  <span class="price-now">3500 &#8381;</span>
+                  <span class="price-early">7600 &#8381;</span>
+                  <span class="price-sale">-30%</span>
+                </div>
+                <div class="catalog__rest">
+                  Осталось 50 шт
+                </div>
+                <div class="catalog__brand">
+                  <i class="bi bi-check-circle-fill"></i>
+                  ориганал
+                </div>
+                <a href="#" class="catalog__title">Чехол из алькантары на Apple </a>
+  
+                <div class="catalog__feedback">
+                  <div class="catalog__raiting">
+                    <i class="bi bi-star-fill"></i>
+                    <span>4,7</span>
+                  </div>
+                  <div class="catalog__review">
+                    <i class="bi bi-chat-fill"></i>
+                    <span>789 отзыва</span>
+                  </div>
+                </div>
+                <button class="catalog__btn">Заказать</button>
+              </div>
+              <div class="catalog__card">
+                <div class="img__wrapper">
+                  <img class="catalog__img" src="img/06435f31-b9c7-4977-9b47-2ff80a66f3f4.webp" alt="">
+                  <i class="fav-btn bi bi-heart-fill"></i>
+                  <div class="catalog__promotions">
+                    <div class="sales">
+                      Распродажа
+                    </div>
+                  </div>
+                </div>
+                <div class="catalog__price">
+                  <span class="price-now">3500 &#8381;</span>
+                  <span class="price-early">7600 &#8381;</span>
+                  <span class="price-sale">-30%</span>
+                </div>
+                <div class="catalog__rest">
+                  Осталось 50 шт
+                </div>
+                <div class="catalog__brand">
+                  <i class="bi bi-check-circle-fill"></i>
+                  ориганал
+                </div>
+                <a href="#" class="catalog__title">Чехол из алькантары на Apple iPhone 16 Pro хол из алькантары на Apple iPhone 16 Pro хол из алькантары на Apple iPhone 16 Pro</a>
+  
+                <div class="catalog__feedback">
+                  <div class="catalog__raiting">
+                    <i class="bi bi-star-fill"></i>
+                    <span>4,7</span>
+                  </div>
+                  <div class="catalog__review">
+                    <i class="bi bi-chat-fill"></i>
+                    <span>789 отзыва</span>
+                  </div>
+                </div>
+                <button class="catalog__btn">Заказать</button>
+              </div>
+              <div class="catalog__card">
+                <div class="img__wrapper">
+                  <img class="catalog__img" src="img/Clock.webp" alt="">
+                  <i class="fav-btn bi bi-heart-fill"></i>
+                  <div class="catalog__promotions">
+                    <div class="sales">
+                      Распродажа
+                    </div>
+                  </div>
+                </div>
+                <div class="catalog__price">
+                  <span class="price-now">3500 &#8381;</span>
+                  <span class="price-early">7600 &#8381;</span>
+                  <span class="price-sale">-30%</span>
+                </div>
+                <div class="catalog__rest">
+                  Осталось 50 шт
+                </div>
+                <div class="catalog__brand">
+                  <i class="bi bi-check-circle-fill"></i>
+                  ориганал
+                </div>
+                <a href="#" class="catalog__title">Чехол из алькантары на Apple </a>
+  
+                <div class="catalog__feedback">
+                  <div class="catalog__raiting">
+                    <i class="bi bi-star-fill"></i>
+                    <span>4,7</span>
+                  </div>
+                  <div class="catalog__review">
+                    <i class="bi bi-chat-fill"></i>
+                    <span>789 отзыва</span>
+                  </div>
+                </div>
+                <button class="catalog__btn">Заказать</button>
+              </div>
+              <div class="catalog__card">
+                <div class="img__wrapper">
+                  <img class="catalog__img" src="img/iphon.webp" alt="">
+                  <i class="fav-btn bi bi-heart-fill"></i>
+                  <div class="catalog__promotions">
+                    <div class="sales">
+                      Распродажа
+                    </div>
+                  </div>
+                </div>
+                <div class="catalog__price">
+                  <span class="price-now">3500 &#8381;</span>
+                  <span class="price-early">7600 &#8381;</span>
+                  <span class="price-sale">-30%</span>
+                </div>
+                <div class="catalog__rest">
+                  Осталось 50 шт
+                </div>
+                <div class="catalog__brand">
+                  <i class="bi bi-check-circle-fill"></i>
+                  ориганал
+                </div>
+                <a href="#" class="catalog__title">Чехол из алькантары на Apple iPhone 16 Pro хол из алькантары на Apple iPhone 16 Pro хол из алькантары на Apple iPhone 16 Pro</a>
+  
+                <div class="catalog__feedback">
+                  <div class="catalog__raiting">
+                    <i class="bi bi-star-fill"></i>
+                    <span>4,7</span>
+                  </div>
+                  <div class="catalog__review">
+                    <i class="bi bi-chat-fill"></i>
+                    <span>789 отзыва</span>
+                  </div>
+                </div>
+                <button class="catalog__btn">Заказать</button>
+              </div>
+              <div class="catalog__card">
+                <div class="img__wrapper">
+                  <img class="catalog__img" src="img/06435f31-b9c7-4977-9b47-2ff80a66f3f4.webp" alt="">
+                  <i class="fav-btn bi bi-heart-fill"></i>
+                  <div class="catalog__promotions">
+                    <div class="sales">
+                      Распродажа
+                    </div>
+                  </div>
+                </div>
+                <div class="catalog__price">
+                  <span class="price-now">3500 &#8381;</span>
+                  <span class="price-early">7600 &#8381;</span>
+                  <span class="price-sale">-30%</span>
+                </div>
+                <div class="catalog__rest">
+                  Осталось 50 шт
+                </div>
+                <div class="catalog__brand">
+                  <i class="bi bi-check-circle-fill"></i>
+                  ориганал
+                </div>
+                <a href="#" class="catalog__title">Чехол из алькантары на Apple </a>
+  
+                <div class="catalog__feedback">
+                  <div class="catalog__raiting">
+                    <i class="bi bi-star-fill"></i>
+                    <span>4,7</span>
+                  </div>
+                  <div class="catalog__review">
+                    <i class="bi bi-chat-fill"></i>
+                    <span>789 отзыва</span>
+                  </div>
+                </div>
+                <button class="catalog__btn">Заказать</button>
+              </div>
+              <div class="catalog__card">
+                <div class="img__wrapper">
+                  <img class="catalog__img" src="img/Clock.webp" alt="">
+                  <i class="fav-btn bi bi-heart-fill"></i>
+                  <div class="catalog__promotions">
+                    <div class="sales">
+                      Распродажа
+                    </div>
+                  </div>
+                </div>
+                <div class="catalog__price">
+                  <span class="price-now">3500 &#8381;</span>
+                  <span class="price-early">7600 &#8381;</span>
+                  <span class="price-sale">-30%</span>
+                </div>
+                <div class="catalog__rest">
+                  Осталось 50 шт
+                </div>
+                <div class="catalog__brand">
+                  <i class="bi bi-check-circle-fill"></i>
+                  ориганал
+                </div>
+                <a href="#" class="catalog__title">Чехол из алькантары на Apple iPhone 16 Pro хол из алькантары на Apple iPhone 16 Pro хол из алькантары на Apple iPhone 16 Pro</a>
+  
+                <div class="catalog__feedback">
+                  <div class="catalog__raiting">
+                    <i class="bi bi-star-fill"></i>
+                    <span>4,7</span>
+                  </div>
+                  <div class="catalog__review">
+                    <i class="bi bi-chat-fill"></i>
+                    <span>789 отзыва</span>
+                  </div>
+                </div>
+                <button class="catalog__btn">Заказать</button>
+              </div>
+              <div class="catalog__card">
+                <div class="img__wrapper">
+                  <img class="catalog__img" src="img/iphon.webp" alt="">
+                  <i class="fav-btn bi bi-heart-fill"></i>
+                  <div class="catalog__promotions">
+                    <div class="sales">
+                      Распродажа
+                    </div>
+                  </div>
+                </div>
+                <div class="catalog__price">
+                  <span class="price-now">3500 &#8381;</span>
+                  <span class="price-early">7600 &#8381;</span>
+                  <span class="price-sale">-30%</span>
+                </div>
+                <div class="catalog__rest">
+                  Осталось 50 шт
+                </div>
+                <div class="catalog__brand">
+                  <i class="bi bi-check-circle-fill"></i>
+                  ориганал
+                </div>
+                <a href="#" class="catalog__title">Чехол из алькантары на Apple </a>
+  
+                <div class="catalog__feedback">
+                  <div class="catalog__raiting">
+                    <i class="bi bi-star-fill"></i>
+                    <span>4,7</span>
+                  </div>
+                  <div class="catalog__review">
+                    <i class="bi bi-chat-fill"></i>
+                    <span>789 отзыва</span>
+                  </div>
+                </div>
+                <button class="catalog__btn">Заказать</button>
+              </div>
+              <div class="catalog__card">
+                <div class="img__wrapper">
+                  <img class="catalog__img" src="img/06435f31-b9c7-4977-9b47-2ff80a66f3f4.webp" alt="">
+                  <i class="fav-btn bi bi-heart-fill"></i>
+                  <div class="catalog__promotions">
+                    <div class="sales">
+                      Распродажа
+                    </div>
+                  </div>
+                </div>
+                <div class="catalog__price">
+                  <span class="price-now">3500 &#8381;</span>
+                  <span class="price-early">7600 &#8381;</span>
+                  <span class="price-sale">-30%</span>
+                </div>
+                <div class="catalog__rest">
+                  Осталось 50 шт
+                </div>
+                <div class="catalog__brand">
+                  <i class="bi bi-check-circle-fill"></i>
+                  ориганал
+                </div>
+                <a href="#" class="catalog__title">Чехол из алькантары на Apple iPhone 16 Pro хол из алькантары на Apple iPhone 16 Pro хол из алькантары на Apple iPhone 16 Pro</a>
+  
+                <div class="catalog__feedback">
+                  <div class="catalog__raiting">
+                    <i class="bi bi-star-fill"></i>
+                    <span>4,7</span>
+                  </div>
+                  <div class="catalog__review">
+                    <i class="bi bi-chat-fill"></i>
+                    <span>789 отзыва</span>
+                  </div>
+                </div>
+                <button class="catalog__btn">Заказать</button>
+              </div>
             </div>
-        </section>
+          </div>
+        </div>
+      </section>
     </main>
     <footer>
-
+  
     </footer>
-</body>
-</html>
+  </body>
+  
+  </html>
